# FastAPI-Dunossauro

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  schemas.py  security.py  settings.py
fast_zero/routes/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: d6e11d52f60b_create_users_table.py  e2c24a065028_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
